--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,34 @@
 
     <groupId>org.MoonShot</groupId>
     <artifactId>com.moon</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>Generic</module>
+        <module>Cnn</module>
+        <module>Amazon</module>
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>2.53.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-server</artifactId>
+                <version>2.53.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>6.9.10</version>
+            </dependency>
+        </dependencies>
+
+    </dependencyManagement>
 
 
 </project>
