--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
                 <artifactId>testng</artifactId>
                 <version>6.9.10</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>3.14</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
